--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "body-parser": "^1.18.3",
     "client": "file:client",
     "concurrently": "^4.1.0",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.4.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.0",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "redux-thunk": "^2.3.0",
