--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "fuse.js": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "react": "^16.6.3",
     "react-confirm-alert": "^2.0.7",
